[package]
name = "lance-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true


[dependencies]
prost.workspace = true
prost-types.workspace = true
lance-core.workspace = true
lance-arrow.workspace = true

[build-dependencies]
prost-build.workspace = true
